# fastAPI-foods

./: .gitignore  README.md
fast_zero/: README.md  pyproject.toml
fast_zero/fast_zero/: app.py
fast_zero/fast_zero/database/: database.py
fast_zero/fast_zero/models/: models.py
fast_zero/fast_zero/repositories/: analytics.py  recommendation.py
fast_zero/fast_zero/routes/: analytics.py  recommendations.py  users.py
fast_zero/fast_zero/schemas/: analytics.py  consumptions.py  feedback.py  profile.py  recommendations.py
fast_zero/fast_zero/security/: auth.py
fast_zero/fast_zero/services/: embeddings.py  recommendation_engine.py  tdee.py
fast_zero/fast_zero/settings/: settings.py
fast_zero/migration/versions/: a1b2c3d4e5f6_add_profiles_consumptions_feedback.py
fast_zero/tests/: factories.py
fast_zero/tests/perf/: test_analytics_perf.py
fast_zero/tests/repositories/: test_analytics_repo.py  test_recommendation_repo.py
fast_zero/tests/router/: analytics.py  recipes.py  recommendations.py  users.py
fast_zero/tests/schemas/: test_analytics_schemas.py  test_consumptions_enum.py  test_schemas.py
fast_zero/tests/services/: test_embeddings.py  test_tdee.py
